--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                                     <dl class="education-description timeline-content">
                                         <dt class="education-name">环境保护工程学院</dt>
                                         <dd class="education-year">1993.08</dd>
-                                        <dd class="education-major">专科生（机电工程）</dd>
+                                        <dd class="education-major">专科生（机电）</dd>
+                                        <dt class="education-name">工作经历</dt>
+                                        <dd class="education-learn">瑞德铭科技有限公司_16年-至今_运营 </dd>
                                     </dl>
                                 </li>
                             </ul>
@@ -152,8 +154,8 @@
                                 <li class="timeline-item experience-project">
                                     <h3 class="timeline-title"><span class="experience-project-type">个人项目</span></h3>
                                     <dl class="experience-description timeline-content">
-                                        <dt class="experience-project-name">仿站: 海贼王 <a href="http://blog.luckyman.xyz/Website_Page/bin/">demo</a></dt>
-                                        <dd class="experience-task"> <strong>HTML</strong> + <strong>CSS</strong> 仿站</dd>
+                                        <dt class="experience-project-name">仿站: 海贼王 <a href="http://blog.luckyman.xyz/Website_Page/bin/">Demo</a></dt>
+                                        <dd class="experience-task"> <strong>HTML</strong> + <strong>CSS</strong> + <strong>jQuery</strong></dd>
                                     </dl>
                                 </li>
                             </ul>
@@ -230,6 +232,13 @@
                                         <li class="skills-item-description"><span>对 <strong>前端</strong> / <strong>后端</strong> / <strong>算法</strong> / <strong>HTTP</strong > 等程序设计相关内容有浓厚的兴趣</span></li>
                                         <li class="skills-item-description"><span>对硬件设备也有一定的兴趣，<strong>非典型技术宅</strong>，<strong>爱折腾</strong>，喜欢折腾一些稀奇古怪的技术</span></li>
                                         <li class="skills-item-description"><span>有明确的 <strong>短期目标</strong> 及 <strong>长期目标</strong>，建立有自己的<strong>职业生涯规划</strong></span></li>
+                                    </ul>
+                                </li>
+                                <li class="timeline-item skills-miscellaneous beizhu">
+                                    <h3 class="timeline-title"><span class="skills-type">备注</span></h3>
+                                    <ul class="skills-description skills-miscellaneous timeline-content ">
+                                        <li class="skills-item-description"><span>简历在线地址：<strong>resume.luckyman.xyz</strong></span></li>
+                                        <li class="skills-item-description">可在线上简历访问本页项目.</li>
                                     </ul>
                                 </li>
                             </ul>
