--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
                                     <dl class="education-description timeline-content">
                                         <dt class="education-name">环境保护工程学院</dt>
                                         <dd class="education-year">1993.08</dd>
-                                        <dd class="education-major">专科生（机电）</dd>
-                                        <dt class="education-name">工作经历</dt>
-                                        <dd class="education-learn">瑞德铭科技有限公司_16年-至今_运营 </dd>
+                                        <dd class="education-major">专科生</dd>
                                     </dl>
                                 </li>
                             </ul>
