--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
                                     </h3>
                                     <dl class="education-description timeline-content">
                                         <dt class="education-name">环境保护工程学院</dt>
-                                        <dd class="education-year">1993.08</dd>
-                                        <dd class="education-major">专科生</dd>
+                                        <dd class="education-year">1993 年</dd>
+                                        <dd class="education-major">机电 | 专科</dd>
+                                        <dd class="education-name">瑞德铭科技发展有限公司 2016 - 2017 </dd>
+                                        <dd class="education-work">负责页面组件开发，H5页面制作相关工作</dd>
                                     </dl>
                                 </li>
                             </ul>
