--- a/index.html
+++ b/index.html
@@ -52,27 +52,7 @@
             </header>
             <article class="content row">
                 <article class="column-6 first column">
-                    <section class="education">
-                        <div class="sec-title-wrapper">
-                            <h3 class="sec-title"><span class="sec-title-ch">个人信息</span><span class="sec-title-en">Information</span></h3>
-                        </div>
-                        <div class="timeline-wrapper">
-                            <ul class="sec-content timeline">
-                                <li class="timeline-item education-undergraduate">
-                                    <h3 class="timeline-title">
-                                        <time class="education-time">2013~2016</time>
-                                    </h3>
-                                    <dl class="education-description timeline-content">
-                                        <dt class="education-name">环境保护工程学院</dt>
-                                        <dd class="education-year">1993 年</dd>
-                                        <dd class="education-major">机电 | 专科</dd>
-                                        <dd class="education-name">瑞德铭科技发展有限公司 2016 - 2017 </dd>
-                                        <dd class="education-work">负责页面组件开发，H5页面制作相关工作</dd>
-                                    </dl>
-                                </li>
-                            </ul>
-                        </div>
-                    </section>
+                    
                     <section class="experience">
                         <div class="sec-title-wrapper">
                             <h3 class="sec-title"><span class="sec-title-ch">项目经验</span><span class="sec-title-en">Experience</span></h3>
@@ -154,8 +134,29 @@
                                 <li class="timeline-item experience-project">
                                     <h3 class="timeline-title"><span class="experience-project-type">个人项目</span></h3>
                                     <dl class="experience-description timeline-content">
-                                        <dt class="experience-project-name">仿站: 海贼王 <a href="http://blog.luckyman.xyz/Website_Page/bin/">Demo</a></dt>
+                                        <dt class="experience-project-name"> 海贼网站 <a href="http://blog.luckyman.xyz/Website_Page/bin/"> 预览</a></dt>
                                         <dd class="experience-task"> <strong>HTML</strong> + <strong>CSS</strong> + <strong>jQuery</strong></dd>
+                                    </dl>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+                    <section class="education">
+                        <div class="sec-title-wrapper">
+                            <h3 class="sec-title"><span class="sec-title-ch">个人信息</span><span class="sec-title-en">Information</span></h3>
+                        </div>
+                        <div class="timeline-wrapper">
+                            <ul class="sec-content timeline">
+                                <li class="timeline-item education-undergraduate">
+                                    <h3 class="timeline-title">
+                                        <time class="education-time">2013~2016</time>
+                                    </h3>
+                                    <dl class="education-description timeline-content">
+                                        <dt class="education-name">环境保护工程学院</dt>
+                                        <dd class="education-year">1993 年</dd>
+                                        <dd class="education-major"> 专科</dd>
+                                        <dd class="education-name">瑞德铭科技发展有限公司 2016 - 2017 </dd>
+                                        <dd class="education-work">负责页面组件开发，H5页面制作相关工作</dd>
                                     </dl>
                                 </li>
                             </ul>
