--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                         <dd class="education-year">1993 年</dd>
                                         <dd class="education-major"> 专科</dd>
                                         <dd class="education-name">瑞德铭科技发展有限公司 2016 - 2017 </dd>
-                                        <dd class="education-work">负责页面组件开发，H5页面制作相关工作</dd>
+                                        <dd class="education-work">运营专员</dd>
                                     </dl>
                                 </li>
                             </ul>
@@ -177,7 +177,7 @@
                                         <dd class="skills-item-description"><span>能够编写语义化的 <strong>HTML</strong>，模块化的 <strong>CSS</strong>，实现常见的布局与动画</span></dd>
                                         <dd class="skills-item-description"><span>熟悉已标准化的 <strong>HTML5</strong> / <strong>CSS3</strong> 新特性，实验项目中能尝试使用未广泛实现的新标准</span></dd>
                                         <dt class="skills-item-summary"><strong>ECMAScript</strong>（<strong>JavaScript</strong>）</dt>
-                                        <dd class="skills-item-description"><span>熟练使用 <strong>ECMAScript</strong> 进行编程，熟悉 <strong>ES6/7/8</strong> 的常用语法</span></dd>
+                                        <dd class="skills-item-description"><span>熟练使用 <strong>ECMAScript</strong> 进行编程，熟悉 <strong>ES6</strong> 的常用语法</span></dd>
                                         <dd class="skills-item-description"><span>熟练面向对象、模块化开发的编程思想，并在实践中尝试使用设计模式进行开发</span></dd>
                                         <dt class="skills-item-summary"><strong>DOM</strong> / <strong>BOM</strong></dt>
                                         <dd class="skills-item-description"><span>熟悉原生 <strong>DOM</strong> 与 <strong>BOM</strong> 的使用及相关标准，有前端组件的开发经验</span></dd>
