--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
                         <div class="timeline-wrapper">
                             <ul class="sec-content timeline">
                                 <li class="timeline-item experience-project">
+                                    <h3 class="timeline-title"><span class="experience-project-type">公司项目</span><span class="experience-title-aside"><a href="javascript:void(0)" class="experience-project-link">——</a><a href="http://www.tianhangbox.com/" class="experience-project-link">地址</a></span></h3>
+                                    <dl class="experience-description timeline-content">
+                                        <dt class="experience-project-name">机票航班系统</dt>
+                                        <dd class="experience-task"><strong> 项目介绍 </strong>: 机票购买,飞机票查询,航班查询系统</dd>
+                                        <dd class="experience-task"><strong> 主要工作 </strong> : 个人中心、所有订单及订单详情页面的开发</dd>
+                                        <dd class="experience-task"><strong> 技术框架 </strong> : Vue.js</dd>
+                                        <dd class="experience-task"><strong> 个人收获 </strong> : 前后端分离、Vue理解与使用的加深、前后端数据的对接、JavaScript的运用、数据类型的转换、软件开发逻辑思维、开发从量到质变化 均得到提升</dd>
+                                        <dd class="experience-task"><strong> 个人总结 </strong> : 第一个开发项目，就是全新的项目，很是幸运。快节奏和效率的开发使自己的潜能得到激发，这很考验个人的学习和适应能力。唯一可惜的就是使用技术有点少/旧，接下来继续专注每个项目并从中学到更多..</dd>
+                                    </dl>
+                                </li>
+                                <li class="timeline-item experience-project">
                                     <h3 class="timeline-title"><span class="experience-project-type">个人项目</span><span class="experience-title-aside"><a href="https://github.com/HuangHongRui/Express-memo" class="experience-project-link">源代码</a><a href="http://memo.luckyman.xyz/" class="experience-project-link">Demo</a></span></h3>
                                     <dl class="experience-description timeline-content">
                                         <dt class="experience-project-name">node.js : Online Memo</dt>
@@ -155,8 +166,10 @@
                                         <dt class="education-name">环境保护工程学院</dt>
                                         <dd class="education-year">1993 年</dd>
                                         <dd class="education-major"> 专科</dd>
-                                        <dd class="education-name">瑞德铭科技发展有限公司 2016 - 2017 </dd>
-                                        <dd class="education-work">运营专员</dd>
+                                        <dd class="education-name">天航科技有限公司 2017 - 至今 </dd>
+                                        <dd class="education-work">前端开发</dd>
+                                        <dd class="education-name">瑞德铭科技有限公司 2016 - 2017 </dd>
+                                        <dd class="education-work">游戏运营</dd>
                                     </dl>
                                 </li>
                             </ul>
